@@ -137,6 +137,7 @@ test-suite libtorrent :
 	[ run test_checking.cpp ]
 	[ run test_url_seed.cpp ]
 	[ run test_web_seed.cpp ]
+	[ run test_web_seed_redirect.cpp ]
 	[ run test_web_seed_socks4.cpp ]
 	[ run test_web_seed_socks5.cpp ]
 	[ run test_web_seed_socks5_pw.cpp ]
